--- a/src/components/registerForm/registerForm.module.css
+++ b/src/components/registerForm/registerForm.module.css
@@ -1,23 +1,23 @@
-.form{
+.form {
   display: flex;
   flex-direction: column;
   text-align: center;
   gap: 30px;
 }
 
-.form input{
+.form input {
   padding: 20px;
   background-color: var(--bg);
-  color: var(--textColor);
+  color: var(--text);
   border: none;
   border-radius: 5px;
 }
 
-.form button{
+.form button {
   padding: 20px;
   cursor: pointer;
   background-color: var(--btn);
-  color: var(--textColor);
+  color: var(--btnText);
   font-weight: bold;
   border: none;
   border-radius: 5px;
